@@ -1,0 +1,1 @@
+udeb/usr/lib/cdebconf/frontend/newt* usr/lib/cdebconf/frontend
