@@ -1,0 +1,1 @@
+udeb/usr/lib/cdebconf/frontend/text* usr/lib/cdebconf/frontend
