@@ -1,6 +1,1 @@
-etc
-usr/bin
-usr/sbin
-usr/lib
-usr/lib/cdebconf
 var/lib/cdebconf
