@@ -1,0 +1,6 @@
+udeb/etc/* etc
+udeb/usr/bin usr
+udeb/usr/lib/cdebconf/db usr/lib/cdebconf
+udeb/usr/lib/cdebconf/lib* usr/lib/cdebconf
+udeb/usr/sbin usr
+udeb/usr/share/debconf usr/share
