@@ -1,7 +1,2 @@
-etc
-usr/bin
-usr/sbin
-usr/lib
-usr/lib/cdebconf
 var/lib/cdebconf/templates
 var/lib/cdebconf/questions
