@@ -1,0 +1,5 @@
+deb/etc/* etc
+deb/usr/bin usr
+deb/usr/lib/cdebconf usr/lib
+deb/usr/sbin usr
+deb/usr/share usr
