@@ -1,0 +1,2 @@
+deb/usr/lib/libdebconfclient.so usr/lib
+deb/usr/include usr
