@@ -1,0 +1,1 @@
+deb/usr/lib/libdebconfclient.so.0* usr/lib
