@@ -5,9 +5,8 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-topdir=$(shell pwd)
-udebbuild=$(topdir)/debian/build-udeb
-debbuild=$(topdir)/debian/build
+debbuild=debian/build-deb
+udebbuild=debian/build-udeb
 
 DEB_HOST_ARCH=$(shell dpkg-architecture -qDEB_HOST_ARCH)
 CONFFILE=/etc/cdebconf.conf
@@ -16,7 +15,7 @@ CONFFILE=/etc/cdebconf.conf
 LIBDEBCONFDEV=libdebconfclient0-dev
 LIBDEBCONF=libdebconfclient0
 
-FRONTENDS=text newt
+DEB_FRONTENDS=text newt
 UDEB_FRONTENDS=text newt
 
 SIZEOPTFLAG=-Os
@@ -29,266 +28,99 @@ ifneq (,$(findstring debug,$(DEB_BUILD_OPTIONS)))
 	DEBUG_CONFIGURE_OPT=--with-debug=yes
 endif
 
+build: build-deb build-udeb
+
+$(debbuild)/config.status:
+	[ -d $(debbuild) ] || mkdir -p $(debbuild)
+	cd $(debbuild); \
+	CFLAGS="$(CFLAGS) $(SPEEDOPTFLAG)" \
+	../../configure \
+		--prefix=/usr \
+		--sysconfdir=/etc \
+		--without-rpath \
+		--with-db="textdb rfc822db" \
+		--with-frontend="$(DEB_FRONTENDS)" \
+		--with-textwrap \
+		--with-conffile=$(CONFFILE) \
+		$(DEBUG_CONFIGURE_OPT)
+
+build-deb: build-deb-stamp
+build-deb-stamp: $(debbuild)/config.status
+	dh_testdir
+	$(MAKE) -C $(debbuild)
+	touch $@
+
+$(udebbuild)/config.status:
+	[ -d $(udebbuild) ] || mkdir -p $(udebbuild)
+	cd $(udebbuild); \
+	CFLAGS="$(CFLAGS) $(SIZEOPTFLAG) -fomit-frame-pointer" \
+	../../configure \
+		--prefix=/usr \
+		--sysconfdir=/etc \
+		--enable-d-i \
+		--without-rpath --with-db="rfc822db" \
+		--with-frontend="$(UDEB_FRONTENDS)" \
+		--with-default-frontend=newt \
+		--with-syslog-logging \
+		--with-textwrap \
+		--with-conffile=$(CONFFILE) \
+		$(DEBUG_CONFIGURE_OPT)
+
+build-udeb: build-udeb-stamp
+build-udeb-stamp: $(udebbuild)/config.status
+	dh_testdir
+	$(MAKE) -C $(udebbuild)
+	touch $@
+
 clean:
 	dh_testdir
 	dh_testroot
 	rm -f *-stamp
-	-$(MAKE) distclean
-	-rm -rf $(udebbuild)
-	-rm -rf $(debbuild)
+	-rm -rf $(debbuild) $(udebbuild)
 	dh_clean
 
-build-udeb: build-udeb-stamp
-build-udeb-stamp:
-	dh_testdir
-	[ -d $(udebbuild) ] || mkdir -p $(udebbuild)
-	(cd $(udebbuild); CFLAGS="$(CFLAGS) $(SIZEOPTFLAG) -fomit-frame-pointer" \
-		$(topdir)/configure --prefix=/usr --sysconfdir=/etc \
-		--enable-d-i \
-		--without-rpath --with-db="rfc822db" \
-		--with-frontend="$(UDEB_FRONTENDS)" $(DEBUG_CONFIGURE_OPT) \
-		--with-default-frontend=newt \
-		--with-syslog-logging \
-		--with-textwrap \
-		--with-conffile=$(CONFFILE))
-	(cd $(udebbuild); $(MAKE) clean; $(MAKE))
-	touch $@
+install: install-arch install-indep
 
-build: build-stamp
-build-stamp:
-	dh_testdir
-	[ -d $(debbuild) ] || mkdir -p $(debbuild)
-	(cd $(debbuild); CFLAGS="$(CFLAGS) $(SPEEDOPTFLAG)" \
-		$(topdir)/configure --prefix=/usr --sysconfdir=/etc \
-		--without-rpath $(DEBUG_CONFIGURE_OPT) \
-		--with-db="textdb rfc822db" \
-		--with-frontend="$(FRONTENDS)" \
-		--with-textwrap \
-		--with-conffile=$(CONFFILE))
-	(cd $(debbuild); $(MAKE) clean; $(MAKE))
-	touch $@
-
-install-udeb: build-udeb install-dirs
+install-arch: build
 	dh_testdir
 	dh_testroot
-	dh_installdebconf -n -pcdebconf-udeb
-	(cd $(udebbuild); \
-		$(MAKE) install prefix=$(shell pwd)/debian/cdebconf-udeb/usr \
-		etcdir=$(shell pwd)/debian/cdebconf-udeb/etc )
-	rm -rf $(shell pwd)/debian/cdebconf-udeb/usr/include
-	rm -rf $(shell pwd)/debian/cdebconf-udeb/usr/share/man
-	rm -rf $(shell pwd)/debian/cdebconf-udeb/usr/lib/cdebconf/frontend/newt.so
-	rm -rf $(shell pwd)/debian/cdebconf-udeb/usr/lib/cdebconf/frontend/text.so
-	rm -rf $(shell pwd)/debian/cdebconf-udeb/usr/lib/lib*.a
-	rm -rf $(shell pwd)/debian/cdebconf-udeb/usr/lib/libdebconfclient.so
-	mv $(shell pwd)/debian/cdebconf-udeb/usr/lib/libdebconfclient.so.* \
-		$(shell pwd)/debian/libdebconfclient0-udeb/usr/lib
+	dh_clean -k -a
+	$(MAKE) -C $(debbuild) install DESTDIR=$(CURDIR)/debian/tmp/deb
+	$(MAKE) -C $(udebbuild) install DESTDIR=$(CURDIR)/debian/tmp/udeb
+	dh_install -a --sourcedir=debian/tmp
 
-install-priority-udeb: build-udeb install-dirs
-	dh_testdir
-	dh_testroot
-	dh_installdebconf -n -pcdebconf-priority
-
-install-slang-udeb: build-udeb install-dirs
-	dh_testdir
-	dh_testroot
-	dh_installdebconf -n -pcdebconf-slang-udeb
-	(cd $(udebbuild)/src/modules/frontend/slang; \
-		$(MAKE) install prefix=$(shell pwd)/debian/cdebconf-slang-udeb/usr )
-
-install-newt-udeb: build-udeb install-dirs
-	dh_testdir
-	dh_testroot
-	dh_installdebconf -n -pcdebconf-newt-udeb
-	(cd $(udebbuild)/src/modules/frontend/newt; \
-		$(MAKE) install prefix=$(shell pwd)/debian/cdebconf-newt-udeb/usr )
-
-install-text-udeb: build-udeb install-dirs
-	dh_testdir
-	dh_testroot
-	dh_installdebconf -n -pcdebconf-text-udeb
-	(cd $(udebbuild)/src/modules/frontend/text; \
-		$(MAKE) install prefix=$(shell pwd)/debian/cdebconf-text-udeb/usr )
-
-install-gtk-udeb: build-udeb install-dirs
-	dh_testdir
-	dh_testroot
-	dh_installdebconf -n -pcdebconf-gtk-udeb
-	(cd $(udebbuild)/src/modules/frontend/gtk; \
-		$(MAKE) install prefix=$(shell pwd)/debian/cdebconf-gtk-udeb/usr )
-
-install: build install-dirs
-	dh_testdir
-	dh_testroot
-	(cd $(debbuild); \
-		$(MAKE) install prefix=$(shell pwd)/debian/cdebconf/usr \
-		etcdir=$(shell pwd)/debian/cdebconf/etc )
-
-	d-shlibmove --commit --movedev debian/cdebconf/usr/include/cdebconf \
-		usr/include debian/cdebconf/usr/lib/lib*.so
-
-
-
-	rm -rf debian/cdebconf/usr/include
-
-install-dirs: install-dirs-stamp
-install-dirs-stamp:
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	dh_installdirs 
+install-indep:
 
 # Build architecture-independent files here.
-binary-indep: build install
-# We have nothing to do by default.
+binary-indep: install-indep
+	dh_testdir
+	dh_testroot
+	dh_installchangelogs -i
+	dh_installdocs -i
+	dh_installdebconf -i
+	dh_installdirs -i
+	dh_compress -i
+	dh_fixperms -i
+	dh_installdeb -i
+	dh_gencontrol -i
+	dh_builddeb -i
 
 # Build architecture-dependent files here.
-#
-# Note that this builds a .udeb, which is not policy compliant or anything.
-binary-arch: cdebconf cdebconf-udeb cdebconf-priority libdebconfclient0-udeb \
-	cdebconf-newt-udeb cdebconf-text-udeb
-
-$(LIBDEBCONF): install
+binary-arch: install-arch
 	dh_testdir
 	dh_testroot
-	dh_installdirs
-
-	dh_installdocs		-p$@
-	dh_installchangelogs	-p$@
-	dh_makeshlibs		-p$@
-	dh_strip		-p$@
-	dh_compress		-p$@
-	dh_fixperms		-p$@
-	dh_installdeb		-p$@
-	dh_shlibdeps		-p$@ -ldebian/$@/usr/lib
-	dh_gencontrol		-p$@
-	dh_md5sums		-p$@
-	dh_builddeb		-p$@
-
-$(LIBDEBCONFDEV): install
-	dh_testdir
-	dh_testroot
-	dh_installdirs
-
-	dh_installdocs		-p$@
-	dh_installchangelogs	-p$@
-	#dh_strip		-p$@
-	dh_compress		-p$@
-	dh_fixperms		-p$@
-	dh_installdeb		-p$@
-	#dh_shlibdeps		-p$@ -ldebian/$@/usr/lib
-	dh_gencontrol		-p$@
-	dh_md5sums		-p$@
-	dh_builddeb		-p$@
-
-cdebconf: $(LIBDEBCONFDEV) $(LIBDEBCONF)
-	@echo "Building $@"
-	dh_testdir
-	dh_testroot
-	dh_installdirs
-
-	dh_installdocs		-p$@ doc/*
-	dh_installchangelogs	-p$@
-	dh_strip		-p$@
-	dh_compress		-p$@
-	dh_fixperms		-p$@
-	dh_makeshlibs		-p$@
-	dh_installdeb		-p$@
-	dh_shlibdeps -p$@ -ldebian/$(LIBDEBCONF)/usr/lib
-	dh_gencontrol		-p$@
-	dh_md5sums		-p$@
-	dh_builddeb		-p$@
-
-
-
-cdebconf-udeb: install-udeb
-	@echo "Building $@"
-	dh_testdir
-	dh_testroot
-	dh_installdirs
-	dh_strip		-p$@
-	dh_compress		-p$@
-	dh_fixperms		-p$@
-	dh_installdeb		-p$@
-	dh_shlibdeps -p$@ -ldebian/$@/usr/lib
-	dh_gencontrol 		-p$@
-	dh_builddeb		-p$@
-
-cdebconf-priority: install-priority-udeb
-	@echo "Building $@"
-	dh_testdir
-	dh_testroot
-	dh_installdirs
-	dh_strip		-p$@
-	dh_compress		-p$@
-	dh_fixperms		-p$@
-	dh_installdeb		-p$@
-	dh_shlibdeps -p$@ -ldebian/$@/usr/lib
-	dh_gencontrol 		-p$@
-	dh_builddeb		-p$@
-
-libdebconfclient0-udeb: install-udeb
-	@echo "Building $@"
-	dh_testdir
-	dh_testroot
-	dh_strip		-p$@
-	dh_compress		-p$@
-	dh_fixperms		-p$@
-	dh_installdeb		-p$@
-	dh_shlibdeps -p$@ -ldebian/$@/usr/lib
-	dh_gencontrol 		-p$@
-	dh_builddeb		-p$@
-
-cdebconf-text-udeb: install-text-udeb
-	@echo "building $@"
-	dh_testdir
-	dh_testroot
-	dh_installdirs
-	dh_strip		-p$@
-	dh_compress		-p$@
-	dh_fixperms		-p$@
-	dh_installdeb		-p$@
-	dh_shlibdeps -p$@ -ldebian/$@/usr/lib
-	dh_gencontrol 		-p$@
-	dh_builddeb		-p$@
-
-cdebconf-slang-udeb: install-slang-udeb
-	@echo "building $@"
-	dh_testdir
-	dh_testroot
-	dh_installdirs
-	dh_strip		-p$@
-	dh_compress		-p$@
-	dh_fixperms		-p$@
-	dh_installdeb		-p$@
-	dh_shlibdeps -p$@ -ldebian/$@/usr/lib
-	dh_builddeb		-p$@
-
-cdebconf-newt-udeb: install-newt-udeb
-	@echo "Building $@"
-	dh_testdir
-	dh_testroot
-	dh_installdirs
-	dh_strip		-p$@
-	dh_compress		-p$@
-	dh_fixperms		-p$@
-	dh_installdeb		-p$@
-	dh_shlibdeps -p$@ -ldebian/$@/usr/lib
-	dh_gencontrol 		-p$@
-	dh_builddeb		-p$@
-
-cdebconf-gtk-udeb:	install-gtk-udeb
-	@echo "Building $@"
-	dh_testdir
-	dh_testroot
-	dh_installdirs
-	dh_strip                -p$@
-	dh_compress             -p$@
-	dh_fixperms             -p$@
-	dh_installdeb           -p$@
-	dh_shlibdeps -p$@ -ldebian/$@/usr/lib
-	dh_gencontrol           -p$@
-	dh_builddeb		-p$@
+	dh_installchangelogs -s
+	dh_installdocs -s
+	dh_installdebconf -s
+	dh_installdirs -s
+	dh_strip -s
+	dh_compress -s
+	dh_fixperms -s
+	dh_makeshlibs -s
+	dh_installdeb -s
+	dh_shlibdeps -s
+	dh_gencontrol -s
+	dh_builddeb -s
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary install
