@@ -2,8 +2,9 @@ cdebconf (0.68) UNRELEASED; urgency=low
 
   * Bastian Blank
     - Use debhelper udeb support.
+    - Cleanup build system.
 
- -- Bastian Blank <waldi@debian.org>  Thu, 08 Jul 2004 11:09:06 +0200
+ -- Bastian Blank <waldi@debian.org>  Thu, 08 Jul 2004 12:21:03 +0200
 
 cdebconf (0.67) unstable; urgency=low
 
